--- a/newcalc.html
+++ b/newcalc.html
@@ -4,11 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator 2</title>
+    <link rel="stylesheet" href="./newcalc.css">
 </head>
 <body>
     <div class="calculator">
         <input type="text" readonly>
-        div.numbers
+        <div class="numbers">
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button class="signs">-</button>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button class="signs">+</button>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button class="signs">*</button>
+            <button>0</button>
+            <button class="signs">/</button>
+            <button class="signs">%</button>
+            <button class="signs">=</button>
+        </div>
     </div>
 </body>
 </html>
